# luos_engine

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  check.md  contributing.md  library.json  platformio.ini  select_board_script.py  source_filter_script.py  west.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  porting-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  dev-build.yml  fix_build.yml  link_checker.yml  merge-checklist.yml  mlc_config.json  pio_release.yml  sandbox.yml
Applications/Mod_gate/: .gitignore  Gate.ioc  README.md
Bootloader/: bootloader_core.c  bootloader_core.h
Drivers/Electronics_examples/: .gitignore
Drivers/Mod_button/: Button.ioc  README.md
Drivers/Mod_dc_motor/: README.md
Drivers/Mod_distance/: .gitignore  Distance.ioc  README.md
Drivers/Mod_gpio/: .gitignore
Drivers/Mod_handy/: Handy.ioc
Drivers/Mod_imu/: .gitignore  Imu.ioc
Drivers/Mod_led/: .gitignore  Led.ioc
Drivers/Mod_led_strip/: .gitignore
Drivers/Mod_light_sensor/: .gitignore
Drivers/Mod_load/: Load.ioc
Drivers/Mod_potentiometer/: .gitignore  README.md
Drivers/Mod_power_switch/: Power_switch.ioc  README.md
Drivers/Mod_servo/: .gitignore  README.md
Engine/HAL/: README.md
Engine/OD/: od_force.h  od_illuminance.h
Examples/: LICENSE  README.md
Examples/Apps/: README.md
Examples/Hardware/: README.md
Examples/Projects/: README.md
Inc/: l0.h  luos.h  message_mngr.h  module_list.h  module_structs.h  routingTable.h  streaming.h
Luos_engine/Bootloader/: bootloader_core.c  bootloader_core.h
Luos_engine/OD/: od_linear.h  od_pid.h  od_temperature.h
OD/: luos_od.h  od_angular.h  od_control.h  od_electric.h  od_force.h  od_illuminance.h  od_linear.h  od_pid.h  od_ratio.h  od_temperature.h  od_time.h
Profiles/Core/: profile_core.c  profile_core.h
Profiles/Motor/: profile_motor.c
Profiles/Servo_motor/: profile_servo_motor.c  profile_servo_motor.h
Profiles/State/: profile_state.c  profile_state.h
Profiles/Voltage/: profile_voltage.c  profile_voltage.h
Robus/inc/: cmd.h  config.h  context.h  detection.h  msgAlloc.h  msg_alloc.h  portManager.h  port_manager.h  reception.h  robus.h  robus_struct.h  sys_msg.h  target.h  timestamp.h  transmission.h
Robus/src/: detection.c  msgAlloc.c  msg_alloc.c  portManager.c  port_manager.c  reception.c  robus.c  sys_msg.c  target.c  timestamp.c  transmission.c
SelfTest/: selftest.c  selftest.h
Templates/Core/: profile_core.c
Templates/Motor/: profile_motor.c  profile_motor.h  struct_motor.h  template_motor.h
Templates/Servo_motor/: profile_servo_motor.c  profile_servo_motor.h  struct_servo_motor.h  template_servo_motor.h
Templates/State/: profile_state.c  profile_state.h  struct_state.h  (+1 more)
Tool_services/: README.md
engine/: engine_config.h
engine/HAL/zephyr/: CMakeLists.txt  luos_hal.c  luos_hal.h
examples/: LICENSE  README.md
inc/: boot.h  bootloader.h  container_structs.h  detection.h  luos.h  luos_list.h  luos_utils.h  message_mngr.h  module_list.h  module_structs.h  profile_core.h  routingTable.h  routing_table.h  service_structs.h  streaming.h
l0/: eeprom.c  eeprom.h  l0.c  l0.h
luos/: CODE_OF_CONDUCT.md
network/robus/HAL/ESP32/luos_engine/: CMakeLists.txt  linker.lf
network/robus/HAL/zephyr/: CMakeLists.txt  robus_hal.c  robus_hal.h
network/robus_network/HAL/ESP32/luos_engine/: CMakeLists.txt  linker.lf
src/: README.md  boot.c  bootloader.c  detection.c  l0.c  luos.c  luos_utils.c  main.c  message_mngr.c  profile_core.c  routingTable.c  routing_table.c  shared_lib_build.py  streaming.c
test/: README.md  code_coverage.py  example_build.py  luos_hal.c  luos_hal.h  luos_hal_config.h  unit_test.c  unit_test.h  unit_test_script.py
tool_services/: README.md
zephyr/: Kconfig.luos  module.yml
(+2721 files in other folders)
